[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mohitkhare"
version = "0.1.0"
description = "Developer utilities and AI engineering tools by Mohit Khare — code snippets, model helpers, and dev productivity."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Mohit Khare", email = "dropthehq@gmail.com"},
]
keywords = ["developer-tools", "ai", "engineering", "utilities", "mohitkhare", "llm", "code-snippets"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]
dependencies = []

[project.urls]
Homepage = "https://mohitkhare.me"
Blog = "https://mohitkhare.me/blog"
Repository = "https://github.com/arnaudleroy-studio/mohitkhare-python"
"Bug Tracker" = "https://github.com/arnaudleroy-studio/mohitkhare-python/issues"

[tool.setuptools.packages.find]
where = ["src"]
